--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,9 +1,7 @@
-dynaconf==3.2.5
-elasticsearch==8.14.0
-fastapi==0.111.0
-pydantic==2.8.2
-PyJWT==2.8.0
-tiktoken==0.7.0
-uvicorn==0.30.1
-openai==1.57.2
-google-auth==2.28.1
+elasticsearch
+httpx
+fastapi
+motor
+uvicorn
+python-multipart
+pymongo
