--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@primevue/auto-import-resolver": "^4.2.5",
     "@primevue/themes": "^4.2.5",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "papaparse": "^5.4.1",
     "pinia": "^2.3.0",
