--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "tailwindcss": "^3.4.16",
     "tailwindcss-primeui": "^0.3.4",
     "unplugin-vue-components": "^0.27.5",
+    "uuid": "^11.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
