--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,8 @@
     "unplugin-vue-components": "^0.27.5",
     "uuid": "^11.0.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "yaml": "^2.6.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
