--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@vueuse/core": "^12.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "dayjs": "^1.11.13",
     "papaparse": "^5.4.1",
     "pinia": "^2.3.0",
